--- a/about.html
+++ b/about.html
@@ -64,6 +64,8 @@
       </div>
     </section>
 
-    <footer><p>Detrix Web Design, Copyright &copy; 2019</p></footer>
+    <footer id="fixed-footer">
+      <p>Detrix Web Design, Copyright &copy; 2019</p>
+    </footer>
   </body>
 </html>
