--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
       </div>
     </section>
 
-    <section id="main">
+    <section id="about">
       <div class="container">
         <article id="main-col">
           <h1 class="page-title">About Us</h1>
